--- a/indicarprocess/templates/base.html
+++ b/indicarprocess/templates/base.html
@@ -25,6 +25,8 @@
 
     <!-- This file store project specific CSS -->
     <link href="{% static 'css/indicarprocess.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap-datepicker3.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap-slider.min.css' %}" rel="stylesheet">
 
     <!-- Use this to quickly test CSS changes in a template,
         then move to indicarprocess.css -->
@@ -70,6 +72,8 @@
 
     <!-- place project specific Javascript in this file -->
     <script src="{% static 'js/indicarprocess.js' %}"></script>
+    <script src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap-slider.min.js' %}"></script>
 
     {% block extra_js %}{% endblock extra_js %}
   </body>
