--- a/indicarprocess/static/css/indicarprocess.css
+++ b/indicarprocess/static/css/indicarprocess.css
@@ -1,1 +1,29 @@
 /*! project specific CSS goes here. */
+.formtype {
+	padding: 1.75em 0em;
+}
+
+.form-line {
+	padding: 0.25em 0em;
+}
+
+.tooltip {
+	display:none !important;
+
+}
+
+.tooltip.in {
+	display:block !important;
+}
+
+.slider-margin {
+	margin-top: 0.5em;
+}
+
+.slider-horizontal {
+	margin: 0em 0.5em 0em;
+}
+
+#search {
+	margin-top:1.6em;
+}
