fix problem of pagination in SceneListView

--- a/indicarprocess/imagery/templates/imagery/scene_list.html
+++ b/indicarprocess/imagery/templates/imagery/scene_list.html
@@ -97,15 +97,15 @@
 
   {% if paginator %}
     <p class="text-muted text-pagination">
-      Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}
+      {% trans 'Page' %} {{ page_obj.number }} {% trans 'of' %} {{ page_obj.paginator.num_pages }}
     </p>
     <ul class="pager">
       {% if page_obj.has_previous %}
-        <li><a href="?page={{ page_obj.previous_page_number }}">&larr; Anterior</a></li>
+        <li><a href="?page={{ page_obj.previous_page_number }}">&larr; {% trans 'Previous' %}</a></li>
       {% endif %}
 
       {% if page_obj.has_next %}
-        <li><a href="?page={{ page_obj.next_page_number }}">Próxima &rarr;</a></li>
+        <li><a href="?page={{ page_obj.next_page_number }}">{% trans 'Next' %} &rarr;</a></li>
       {% endif %}
     </ul>
   {% endif %}
