--- a/indicarprocess/templates/base.html
+++ b/indicarprocess/templates/base.html
@@ -73,6 +73,7 @@
     <!-- place project specific Javascript in this file -->
     <script src="{% static 'js/indicarprocess.js' %}"></script>
     <script src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap-datepicker.pt-BR.js' %}"></script>
     <script src="{% static 'js/bootstrap-slider.min.js' %}"></script>
 
     {% block extra_js %}{% endblock extra_js %}
