update translation and fix bug in date picker

--- a/indicarprocess/imagery/templates/imagery/scene_list.html
+++ b/indicarprocess/imagery/templates/imagery/scene_list.html
@@ -54,7 +54,7 @@
         <div class="col-lg-3">
           <label>{% trans 'Date' %}</label>
           <div class="input-group">
-            <input id="startDate" class="form-control" data-provide="datepicker" data-date-orientation="top left" placeholder="{% trans 'Start Date' %}" data-date-autoclose="true" value="{{ start }}" data-date-format="yyyy-mm-dd" data-language="{% trans 'en-US' %}">
+            <input id="startDate" class="form-control" data-provide="datepicker" data-date-orientation="top left" placeholder="{% trans 'Start Date' %}" data-date-autoclose="true" value="{{ start }}" data-date-format="yyyy-mm-dd" data-date-language="{% trans 'en-US' %}">
             <span class="input-group-addon"> {% trans 'to' %} </span>
             <input id="endDate" class="form-control" data-provide="datepicker" data-date-orientation="top left" placeholder="{% trans 'End Date' %}" data-date-autoclose="true" data-date-start-date="" value='{{ end }}' data-date-format="yyyy-mm-dd" data-date-language="{% trans 'en-US' %}">
           </div>
