--- a/indicarprocess/templates/base.html
+++ b/indicarprocess/templates/base.html
@@ -51,6 +51,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url 'imagery:index' %}">Home</a></li>
             <li><a href="{% url 'imagery:cloud-rate' %}">{% trans 'Cloud Rate' %}</a></li>
+            <li><a href="{% url 'catalogo:resources' %}">Recursos</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
