--- a/indicarprocess/static/css/indicarprocess.css
+++ b/indicarprocess/static/css/indicarprocess.css
@@ -1,33 +1,42 @@
 /*! project specific CSS goes here. */
 .formtype {
-	padding: 1.75em 0em;
+  padding: 1.75em 0em;
 }
 
 .form-line {
-	padding: 0.25em 0em;
+  padding: 0.25em 0em;
 }
 
 .tooltip {
-	display:none !important;
+  display:none !important;
 
 }
 
 .tooltip.in {
-	display:block !important;
+  display:block !important;
 }
 
 .slider-margin {
-	margin-top: 0.5em;
+  margin-top: 0.5em;
 }
 
 .slider-horizontal {
-	margin: 0em 0.5em 0em;
+  margin: 0em 0.5em 0em;
 }
 
 #search {
-	margin-top:1.6em;
+  margin-top:1.6em;
 }
 
 #barra-brasil .brasil-flag {
   height: 29px !important;
+}
+
+.navbar{
+  border-radius: 0px;
+}
+
+.navbar-brand-img{
+  margin-top: -0.3em;
+  margin-right: -0.6em;
 }
