--- a/indicarprocess/templates/base.html
+++ b/indicarprocess/templates/base.html
@@ -5,7 +5,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}indicarprocess{% endblock title %}</title>
+    <title>{% block title %}harpia{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -45,7 +45,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'imagery:index' %}">indicarprocess</a>
+          <a class="navbar-brand navbar-brand-img" href="{% url 'imagery:index' %}">
+            <img width="30" height="30" src="{% static 'images/ibama-logo.png' %}">
+          </a>
+          <a class="navbar-brand" href="{% url 'imagery:index' %}">harpia</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -59,10 +62,9 @@
 
     <div class="container">
 
-      <h1>{% block page_title %}Example Base Template{% endblock page_title %}</h1>
+      <h1>{% block page_title %}{% endblock page_title %}</h1>
 
       {% block content %}
-        <p>Use this document as a way to quick start any new project.</p>
       {% endblock content %}
 
     </div> <!-- /container -->
