--- a/indicarprocess/imagery/templates/imagery/scene_request.html
+++ b/indicarprocess/imagery/templates/imagery/scene_request.html
@@ -6,13 +6,13 @@
 {% block content %}
 
 {% if msg %}
-<div class="alert alert-success">{{ msg }}</div>
+  <div class="alert alert-success">{{ msg }}</div>
 {% endif %}
 
-<form action="{% url 'imagery:scene-request' %}" method="post" role="form">
+<form action="{% url 'imagery:scene-request' %}" method="post" role="form" class="form-group">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">{% trans 'Send' %}</button>
+  <button type="submit" class="btn btn-primary">{% trans 'Send' %}</button>
 </form>
 
 {% endblock content %}
