--- a/indicarprocess/templates/base.html
+++ b/indicarprocess/templates/base.html
@@ -39,13 +39,6 @@
 
     <div class="navbar navbar-inverse">
       <div class="container">
-        <ul class="nav navbar-nav navbar-right">
-          {% if request.user.is_authenticated %}
-            <li><a href="{% url 'imagery:logout' %}">Logout</a></li>
-          {% else %}
-            <li><a href="{% url 'imagery:login' %}">Login</a></li>
-          {% endif %}
-        </ul>
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
@@ -66,6 +59,7 @@
               <li><a href="{% url 'imagery:scene-request' %}">{% trans 'Scene Request' %}</a></li>
             {% endif %}
           </ul>
+          {% include 'imagery/login_menu.html' %}
         </div><!--/.nav-collapse -->
 
       </div>
