improve templates, permissions and add tests to SceneRequestDeleteView

--- a/indicarprocess/imagery/templates/imagery/user_scenerequest_list.html
+++ b/indicarprocess/imagery/templates/imagery/user_scenerequest_list.html
@@ -12,7 +12,7 @@
             <th>{% trans 'Scene' %}</th>
             <th>{% trans 'Creation Date' %}</th>
             <th>{% trans 'Status' %}</th>
-            <th></th>
+            <th><!-- remove column --></th>
           </tr>
         </thead>
         <tbody>
@@ -25,7 +25,9 @@
               {% endif %}
               <td>{{ scene.creation_date|date:"SHORT_DATE_FORMAT" }}</td>
               <td>{{ scene.get_status_display }}</td>
-              <td><a href="{{ scene.get_scene_delete_url }}">Remover</a></td>
+              <td><a href="{% url 'imagery:delete-scene-request' scene.pk %}">
+                <span class="text-danger glyphicon glyphicon-remove-circle"></span>
+              </a></td>
             </tr>
           {% endfor %}
         </tbody>
