--- a/indicarprocess/imagery/templates/imagery/scene_list.html
+++ b/indicarprocess/imagery/templates/imagery/scene_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% load i18n %}
 
 <h1>{% block page_title %}{% trans 'Landsat Catalog' %}{% endblock page_title %}</h1>
@@ -110,3 +111,7 @@
     </ul>
   {% endif %}
 {% endblock content %}
+
+{% block extra_js %}
+  <script src="{% static 'js/imagery.js' %}"></script>
+{% endblock extra_js %}
