--- a/indicarprocess/templates/base.html
+++ b/indicarprocess/templates/base.html
@@ -52,8 +52,9 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'imagery:index' %}">Home</a></li>
-            <li><a href="{% url 'imagery:cloud-rate' %}">{% trans 'Cloud Rate' %}</a></li>
+            <li><a href="{% url 'imagery:index' %}">{% trans 'Landsat Catalog' %}</a></li>
+            <li><a href="{% url 'sentinel_catalog:scene_list' %}">{% trans 'Sentinel Catalog' %}</a></li>
+
             <li><a href="{% url 'catalogo:resources' %}">Recursos</a></li>
             {% if request.user.is_authenticated %}
               <li><a href="{% url 'imagery:request-scene' %}"><span class="glyphicon glyphicon-circle-arrow-down"></span> {% trans 'Request Scene' %}</a></li>
