improve map to quicklook transition

--- a/indicarprocess/imagery/templates/imagery/scene_map.html
+++ b/indicarprocess/imagery/templates/imagery/scene_map.html
@@ -13,4 +13,7 @@
     geoJSON.addTo(map);
     map.fitBounds(geoJSON);
   });
+  map.on('load', function(){
+      $('a[href="#quicklook"]').click();
+  })
 </script>
