--- a/indicarprocess/catalogo/templates/catalogo/recursos.html
+++ b/indicarprocess/catalogo/templates/catalogo/recursos.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-<h1>{% block page_title %}Recursos para uso no QGIS{% endblock page_title %}</h1>
+{% block page_title %}<h1>Recursos para uso no QGIS</h1>{% endblock page_title %}
 
 {% block content %}
   <h3>Catálogos</h3>
