--- a/indicarprocess/imagery/templates/imagery/cloud_rate.html
+++ b/indicarprocess/imagery/templates/imagery/cloud_rate.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
 
-<h1>{% block page_title %}{% trans 'Cloud rates of the last 16 days' %}{% endblock page_title %}</h1>
+{% block page_title %}<h1>{% trans 'Cloud rates of the last 16 days' %}</h1>{% endblock page_title %}
 
 {% block content %}
   {% if cloud_rate_data %}
