--- a/indicarprocess/imagery/templates/imagery/login_page.html
+++ b/indicarprocess/imagery/templates/imagery/login_page.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 
-<h1>{% block page_title %}{% trans 'Login' %}{% endblock page_title %}</h1>
+{% block page_title %}<h1>{% trans 'Login' %}</h1>{% endblock page_title %}
 
 {% block content %}
   {% if msg %}
