--- a/indicarprocess/imagery/templates/imagery/request_scene.html
+++ b/indicarprocess/imagery/templates/imagery/request_scene.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
 
-<h1>{% block page_title %}{% trans 'Request Scene' %}{% endblock page_title %}</h1>
+{% block page_title %}<h1>{% trans 'Request Scene' %}</h1>{% endblock page_title %}
 
 {% block content %}
   {% if msg %}
