--- a/indicarprocess/imagery/templates/imagery/scenerequest_confirm_delete.html
+++ b/indicarprocess/imagery/templates/imagery/scenerequest_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
 
-{% block page_title %}{% trans 'Delete scene request' %} {{ scenerequest }}?{% endblock page_title %}
+{% block page_title %}<h1>{% trans 'Delete scene request' %} {{ scenerequest }}?</h1>{% endblock page_title %}
 
 {% block content %}
   <p>{% trans 'Do you really want to delete the scene request' %} <strong>{{ scenerequest }}</strong>?</p>
