--- a/indicarprocess/imagery/templates/imagery/user_scenerequest_list.html
+++ b/indicarprocess/imagery/templates/imagery/user_scenerequest_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
 
-<h1>{% block page_title %}{% trans 'My Scene Requests' %}{% endblock page_title %}</h1>
+{% block page_title %}<h1>{% trans 'My Scene Requests' %}</h1>{% endblock page_title %}
 
 {% block content %}
   {% if scenes %}
