--- a/indicarprocess/templates/base.html
+++ b/indicarprocess/templates/base.html
@@ -71,8 +71,7 @@
 
 
     <div class="container">
-
-      <h1>{% block page_title %}{% endblock page_title %}</h1>
+      {% block page_title %}{% endblock page_title %}
 
       {% block content %}
       {% endblock content %}
